--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,13 @@
 
 <div id="card">
   <div class="front panel">
-    Front content
+    <h1>{{ word }}</h1>
   </div>
   <div class="back panel">
-    Back content
+    <!--<p>{{ wordDetail }}</p>-->
   </div>
 </div>
-<div *ngFor="let word of dicList;let i = index">
+<!--<div *ngFor="let word of dicList;let i = index">
   <h3>{{ word }}</h3>
   <p>{{dictionary[word].meaning}}</p>
-</div>
+</div>-->
