--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,27 @@
-#inner_wrapper{
-    margin: 5% 30%;
-}
 #card{
+    display:block;
     height: 50vh;
-    width: 70vh;
-    border-radius: 5px;
+    width: 50%;
+    margin: 0 auto;
+    border-radius: 5px;    
 }
 .panel{
     background-color:white;     
     border-radius: 5px;        
+    padding: 10px;
+}
+/*.front{
+    text-align: center;
+}
+.front article{
+        min-height: 100%;
+        margin: auto 0px;
+}
+*/
+.front article h1{
+    text-align: center;
+    font-size: 70px;
+}
+p{
+    word-wrap: break-word;
 }
