--- a/src/styles.css
+++ b/src/styles.css
@@ -47,8 +47,7 @@ app-root{
 .globe{
     display: block;
     height: 100vh;
-    margin: 0 0 0 -10%;
-    bottom: 20px;
+    margin: -15% 0 0 -15%;
     z-index: -1;
 }
 .hero-animate{
