--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,6 +9,7 @@
     background-color:white;     
     border-radius: 5px;        
     padding: 10px;
+    box-shadow: 10px 10px 5px #39224B;    
 }
 /*.front{
     text-align: center;
